<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    tools:context=".auth.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            style="@style/headingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <TextView
            style="@style/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/welcome_back" />

        <EditText
            android:id="@+id/input_email_id"
            style="@style/customEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/localhost_domain_com"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_password"
            style="@style/customEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableTint="@color/primary"
            android:background="@drawable/input_background"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/anyone_21"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgot_password_text"
            style="@style/linkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:text="@string/forgot_password" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:background="#DCDCDC" />

            <TextView
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:padding="@dimen/_8sdp"
                android:text="@string/or_with"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/input_background"
                android:clickable="true"
                android:padding="@dimen/_9sdp">

                <ImageView
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/google"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/input_background"
                android:padding="@dimen/_9sdp">

                <ImageView
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:src="@drawable/github"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">

            <TextView
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/sign_up_text"
                style="@style/linkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:text="@string/sign_up" />
        </LinearLayout>




    </LinearLayout>


</ScrollView>